dev/composables/composable-agents/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: composable-agents
  namespace: composables
  labels:
    app: composable-agents
spec:
  replicas: 1
  selector:
    matchLabels:
      app: composable-agents
  template:
    metadata:
      labels:
        app: composable-agents
        app.kubernetes.io/part-of: soludev-workload
    spec:
      enableServiceLinks: false
      tolerations:
        - key: "klipperlb-exclude"
          value: "true"
          effect: "NoSchedule"
          operator: "Equal"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: composable-agents
          image: kaiohz/pickpro:composable-agents-37275ca6ea21bdc973910f134c9fa7e38a789342
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
      imagePullSecrets:
        - name: pickpro-docker-secret
