dev/composables/composable-agents/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: composable-agents-ingress
  namespace: composables
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: composables-agent.soludev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: composable-agents
                port:
                  number: 8000
